@@ -35,6 +35,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #1729305: Fix doctest to handle encode error with "backsplashreplace".
+
 - Issue #691291: codecs.open() should not convert end of lines on reading and
   writing.
 
